--- a/web_server/server/package.json
+++ b/web_server/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "har-validator": "^5.1.5",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jayson": "^3.6.4",
